// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card default state 1`] = `
<div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </div>
  <div>
    <div>
      A card
    </div>
  </div>
</div>
`;

exports[`2. pass an empty state to the image component 1`] = `
<div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResSize={50}
      uri={null}
    />
  </div>
  <div>
    <div>
      A card with an empty image
    </div>
  </div>
</div>
`;

exports[`3. card without an image when showimage is false 1`] = `
<div>
  <div>
    <div>
      No image
    </div>
  </div>
</div>
`;

exports[`4. pass an empty state to the image component when the uri is null 1`] = `
<div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResSize={50}
      uri={null}
    />
  </div>
  <div>
    <div>
      No URI
    </div>
  </div>
</div>
`;

exports[`5. card with reversed layout 1`] = `
<div>
  <div>
    <div>
      A card in reverse
    </div>
  </div>
  <div>
    <TimesImage
      aspectRatio={0.6666666666666666}
      fadeImageIn={false}
      highResSize={360}
      lowResSize={50}
      uri="https://img.io/img"
    />
  </div>
</div>
`;

exports[`6. card with reversed layout and no image 1`] = `
<div>
  <div>
    <div>
      A card in reverse with no image
    </div>
  </div>
</div>
`;

exports[`7. card with a loading state 1`] = `
<indexweb__FadeIn>
  <div>
    <div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={360}
          lowResSize={50}
          uri="https://img.io/img"
        />
      </div>
      <div>
        <Component>
          <Gradient
            degrees={264}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
        </Component>
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`8. card with a loading state and no image 1`] = `
<indexweb__FadeIn>
  <div>
    <div>
      <div>
        <Component>
          <Gradient
            degrees={264}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
        </Component>
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`9. card with reversed loading state 1`] = `
<indexweb__FadeIn>
  <div>
    <div>
      <div>
        <Component>
          <Gradient
            degrees={264}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
        </Component>
      </div>
      <div>
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={360}
          lowResSize={50}
          uri="https://img.io/img"
        />
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`10. card with reversed loading state with no image 1`] = `
<indexweb__FadeIn>
  <div>
    <div>
      <div>
        <Component>
          <Gradient
            degrees={264}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
          <Gradient
            degrees={267}
          />
        </Component>
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`11. card should not re-render when imageratio prop is changed 1`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Do not re-render me
    </div>
  </div>
</div>
`;

exports[`11. card should not re-render when imageratio prop is changed 2`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Do not re-render me
    </div>
  </div>
</div>
`;

exports[`12. card should re-render when image uri changes 1`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some text
    </div>
  </div>
</div>
`;

exports[`12. card should re-render when image uri changes 2`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="http://foo?resize=360"
        />
        <img
          alt=""
          src="http://foo?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some text
    </div>
  </div>
</div>
`;

exports[`13. card should re-render when low res size changes 1`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`13. card should re-render when low res size changes 2`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`14. card should re-render when high res size changes 1`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`14. card should re-render when high res size changes 2`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`15. card should re-render when loading state changes 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <img
            alt=""
            src="https://img.io/img?resize=360"
          />
          <img
            alt=""
            src="https://img.io/img?resize=50"
          />
        </div>
      </div>
    </div>
    <div>
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`15. card should re-render when loading state changes 2`] = `
<div>
  <div>
    <div>
      <div>
        <img
          alt=""
          src="https://img.io/img?resize=360"
        />
        <img
          alt=""
          src="https://img.io/img?resize=50"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      Re-render me
    </div>
  </div>
</div>
`;
